syntax = "proto3";

package auth;

option go_package = "github.com/thanh2k4/Chat-app/proto/gen";

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Refresh (RefreshRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Logout ( LogoutRequest ) returns (google.protobuf.Empty);
  rpc UpdateAuth( UpdateAuthRequest ) returns (google.protobuf.Empty);
}

message UpdateAuthRequest {
  string id = 1;
  string username = 2 [(buf.validate.field).string.min_len = 5, (buf.validate.field).string.max_len = 20];
  string password = 3 [(buf.validate.field).string.min_len = 6, (buf.validate.field).string.max_len = 20];
}

message LogoutRequest {
  string id = 1;
}

message RegisterRequest {
  string id = 1;
  string username = 2 [(buf.validate.field).string.min_len = 5, (buf.validate.field).string.max_len = 20];
  string password = 3 [(buf.validate.field).string.min_len = 6, (buf.validate.field).string.max_len = 20];
}

message RefreshRequest {
  string refresh_token = 1 ;
}

message LoginRequest {
  string username = 1 [(buf.validate.field).string.min_len = 5, (buf.validate.field).string.max_len = 20];
  string password = 2 [(buf.validate.field).string.min_len = 6, (buf.validate.field).string.max_len = 20];
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
}
